[gd_scene load_steps=6 format=3 uid="uid://cemwq6ph52hjc"]

[ext_resource type="ArrayMesh" uid="uid://bitd0pu3pyy36" path="res://meshes/door_0.obj" id="1_vetx6"]
[ext_resource type="Texture2D" uid="uid://dxjv4stglttin" path="res://textures/door_0.png" id="2_41kkh"]
[ext_resource type="Script" path="res://scripts/door.gd" id="3_mr4r4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sr4ss"]
transparency = 1
albedo_texture = ExtResource("2_41kkh")
texture_filter = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_2sjj2"]
size = Vector3(2, 2, 2)

[node name="Door" type="Node3D"]
script = ExtResource("3_mr4r4")

[node name="Door0" type="MeshInstance3D" parent="."]
layers = 3
mesh = ExtResource("1_vetx6")
surface_material_override/0 = SubResource("StandardMaterial3D_sr4ss")

[node name="StaticBody3D" type="StaticBody3D" parent="Door0"]
collision_layer = 11
collision_mask = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door0/StaticBody3D"]
shape = SubResource("BoxShape3D_2sjj2")

[node name="Area3D" type="Area3D" parent="Door0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Door0/Area3D"]
shape = SubResource("BoxShape3D_2sjj2")

[node name="nav_obstacle" type="NavigationObstacle3D" parent="."]

[connection signal="input_event" from="Door0/StaticBody3D" to="." method="_on_static_body_3d_input_event"]
[connection signal="body_entered" from="Door0/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Door0/Area3D" to="." method="_on_area_3d_body_exited"]
